--- a/tasks/manage.yml
+++ b/tasks/manage.yml
@@ -23,6 +23,7 @@
   with_items: "{{ users }}"
   loop_control:
     loop_var: user
+  when: user.hosts is not defined or inventory_hostname in user.hosts
 
 - name: Removing users
   user:
